--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <div class="logo-container">
       <img class ="logo" src="img/logo.svg">  
     </div>
-    <img class ="maggi" src="img/maggi.jpg">
-    <img class ="maggi-mobile" src="img/maggi-mobile.jpg">
+    <video class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
 
   </body>
 
