--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
 
 <div class="booking-form">
     <h2>Book Your Fly Fishing Tour</h2>
-    <form action="submit_booking.php" method="POST">
+    <form action="form.php" method="POST">
         <!-- Tour Length Selection with Boxes -->
         <div class="tour-options">
             <label>
