--- a/index.html
+++ b/index.html
@@ -14,10 +14,28 @@
 </head>
 
   <body>
-    <div class="logo-container">
-      <img class ="logo" src="img/logo.svg">  
+
+    <div class="hero">
+      <div class="hero-left">
+        <h1>River Lýsa</h1>
+        <h2>
+          Unforgettable fly<br> fishing journey in <br> west Iceland
+        </h2>
+        <h3>
+          Full private lodging and river<br> system from $1490 per person
+        </h3>
+        <div class="button-container">
+          <button>Reserve now</button>
+          <button class="secondary">Learn more</button>
+        </div>
+      </div>
+
+      <video class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
+
     </div>
-    <video class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
+
+    <div class="test"></div>
+    <h1>123<br>123<br>123</h1>
 
   </body>
 
