--- a/index.html
+++ b/index.html
@@ -13,15 +13,26 @@
 
 </head>
 
+  <header>
+    
+    <img src="img/logo.svg">
+    <ul>
+      <li>River Lýsa</li>
+    </ul>
+    <button>Book now</button>
+
+  </header>
+
   <body>
 
     <div class="hero">
       <div class="hero-left">
-        <h1>River Lýsa</h1>
-        <h2>
+        <h4>AVAILABLE JUNE – SEPTEMBER</h4>
+        <h1 class="white">River Lýsa</h1>
+        <h2 class="white">
           Unforgettable fly<br> fishing journey in <br> west Iceland
         </h2>
-        <h3>
+        <h3 class="white">
           Full private lodging and river<br> system from $1490 per person
         </h3>
         <div class="button-container">
@@ -34,9 +45,37 @@
 
     </div>
 
-    <div class="test"></div>
-    <h1>123<br>123<br>123</h1>
+    <div class="body-container">
+      <div class="info-left">
+                  <h2>Fly fish in the unique beauty of west Iceland</h2>
+
+      </div>
+
+      <div class="sticky-cta">
+        <div class="img-container">
+          <img src="img/1-small.jpg">
+        </div>
+      </div>
+      
+    </div>
 
   </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
