--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
 
-    
+
     <ul>
       <li>River Lýsa</li>
     </ul>
@@ -69,14 +69,21 @@
     </div>
 
     <div class="body-container">
-      <div class="info-left">
-                  <h2>Fly fish in the unique beauty of west Iceland</h2>
 
-      </div>
+        <div class="info-left">
+
+              <div class="section-1">
+                    <h2>Fly fish in the unique<br> beauty of west Iceland</h2>
+                    <p>River Lýsa is located at the south<br> coast of Snæfellsnes surrounded<br>by wild untouched nature</p>
+              </div>
+
+        </div>
+
+
 
       <div class="sticky-cta">
         <div class="img-container">
-          <img src="img/1-small.jpg">
+          <img loading ="lazy" src="img/1-small.jpg">
         </div>
       </div>
       
