--- a/index.html
+++ b/index.html
@@ -75,17 +75,38 @@
               <div class="section-1">
                     <h2>Fly fish in the unique<br> beauty of west Iceland</h2>
                     <p>River Lýsa is located at the south<br> coast of Snæfellsnes surrounded<br>by wild untouched nature</p>
-              </div>
 
-        </div>
+                    <div class="gallery">
+                      <button class = "secondary">Show all photos</button>
+                      <div class ="gallery-1">
+                        <img src="img/g1-1.jpg">
+                        <img src="img/g1-2.jpg">
+                      </div>
+                      <div class="gallery-2">
+
+                        <div class = "gallery-2-top">
+                          <img src="img/g1-3.jpg">
+                          <img src="img/g1-4.jpg">
+                        </div>
+                        <div class="gallery-2-bottom">
+                          <img class = "gallery-img-last" src="img/g1-5.jpg">
+                        </div>
+
+                      </div>
 
 
+                      </div>
 
-      <div class="sticky-cta">
-        <div class="img-container">
-          <img loading ="lazy" src="img/1-small.jpg">
-        </div>
-      </div>
+
+                </div>
+
+         </div>
+
+          <div class="sticky-cta">
+            <div class="img-container">
+              <img loading ="lazy" src="img/1-small.jpg">
+            </div>
+          </div>
       
     </div>
 
