--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
                     <div class="gallery">
                       <button class = "secondary">Show all photos</button>
                       <div class ="gallery-1">
-                        <img src="img/g1-1.jpg">
-                        <img src="img/g1-2.jpg">
+                        <img loading = "lazy" src="img/g1-1.jpg">
+                        <img loading = "lazy" src="img/g1-2.jpg">
                       </div>
                       <div class="gallery-2">
 
                         <div class = "gallery-2-top">
-                          <img src="img/g1-3.jpg">
-                          <img src="img/g1-4.jpg">
+                          <img loading = "lazy" src="img/g1-3.jpg">
+                          <img loading = "lazy" src="img/g1-4.jpg">
                         </div>
                         <div class="gallery-2-bottom">
-                          <img class = "gallery-img-last" src="img/g1-5.jpg">
+                          <img loading = "lazy" class = "gallery-img-last" src="img/g1-5.jpg">
                         </div>
 
                       </div>
