--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8"> 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="glightbox.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="favicon.png"/>
   <title>AlltRaf</title>
@@ -10,8 +11,6 @@
   <meta property="og:image" content=""/>
   <meta name="keywords" content="Rafverktakar, Rafvirki">
   <meta name="author" content="AlltRaf Rafverktakar">  
-
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.0.9/css/glightbox.min.css">
 
 
 </head>
