--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
 
     <!-- GLightbox Library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/glightbox/3.0.9/js/glightbox.min.js"></script>
+    <script src="glightbox.min.js"></script>
 
     <!-- Your Initialization Script -->
     <script>
