--- a/index.html
+++ b/index.html
@@ -92,13 +92,22 @@
                         <div class="gallery-2">
 
                           <div class = "gallery-2-top">
-                            <img loading = "lazy" src="img/g1-3.jpg">
-                            <img loading = "lazy" src="img/g1-4.jpg">
+                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" src="img/g1-3.jpg">
+                            </a>
+                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" src="img/g1-4.jpg">
+                            </a>
+
                           </div>
                           <div class="gallery-2-bottom">
-                            <img loading = "lazy" class = "gallery-img-last" src="img/g1-5.jpg">
+                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" class = "gallery-img-last" src="img/g1-5.jpg">
+                            </a>
                           </div>
                         </div>
+
+                        <!-- Hidden gallery -->
 
                         <a href="img/g1-6-fullres.jpg" class = "glightbox hidden" data-gallery="mygallery">
                             <img loading = "lazy" src="img/g1-1.jpg">
@@ -113,9 +122,15 @@
          </div>
 
           <div class="sticky-cta">
-            <div class="img-container">
-              <img loading ="lazy" src="img/1-small.jpg" width="300" height="100">
-            </div>
+              <div class="img-container">
+                <img loading ="lazy" src="img/1-small.jpg" width="300" height="100">
+              </div>
+              <div class="sticky-container">
+                <span>River Lýsa</span><br>
+                <span class ="span-1">Full private lodging and river system from $1490 per person</span>
+                <button>Reserve a spot</button>
+                <span class ="span-2">Lock In Your Adventure with 15% Upfront!</span>
+              </div>
           </div>
       
     </div>
