--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 <img loading ="lazy" src="img/1-small.jpg" width="300" height="100">
               </div>
               <div class="sticky-container">
-                <span>River Lýsa</span><br>
-                <span class ="span-1">Full private lodging and river system from $1490 per person</span>
+                <span>River Lýsa</span>
+                <span class ="span-1">Full private lodging and river<br> system from $1490 per person</span>
                 <button>Reserve a spot</button>
                 <span class ="span-2">Lock In Your Adventure with 15% Upfront!</span>
               </div>
