--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </div>
 
-      <video class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
+      <video poster ="img/poster.jpg"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
 
     </div>
 
