--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <meta property="og:image" content=""/>
   <meta name="keywords" content="Rafverktakar, Rafvirki">
   <meta name="author" content="AlltRaf Rafverktakar">  
+  <meta http-equiv="Cache-Control" content="max-age=31536000">
 
 
 </head>
