--- a/index.html
+++ b/index.html
@@ -83,27 +83,27 @@
 
                         <button class = "secondary"onclick="openGlightbox()">Show all photos</button>
                         <div class ="gallery-1">
-                          <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                          <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                             <img loading = "lazy" src="img/g1-1.jpg">
                           </a>
-                          <a href="img/g1-2-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                          <a href="img/g1-2-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                             <img loading = "lazy" src="img/g1-2.jpg">
                           </a>
                         </div>
                         <div class="gallery-2">
 
                           <div class = "gallery-2-top">
-                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                               <img loading = "lazy" src="img/g1-3.jpg">
                             </a>
-                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
+                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
                               <img loading = "lazy" src="img/g1-4.jpg">
                             </a>
 
                           </div>
                           <div class="gallery-2-bottom">
-                            <a href="img/g1-1-fullres.jpg" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" class = "gallery-img-last" src="img/g1-5.jpg">
+                            <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
+                              <img loading = "lazy" class loading = "lazy" = "gallery-img-last" src="img/g1-5.jpg">
                             </a>
                           </div>
                         </div>
