--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 
     <div class="hero">
       <div class="hero-left">
+        <div class="z-index">
         <h4>AVAILABLE JUNE – SEPTEMBER</h4>
         <h1 class="white">River Lýsa</h1>
         <h2 class="white">
@@ -65,6 +66,9 @@
           <button>Reserve now</button>
           <button class="secondary">Learn more</button>
         </div>
+      </div>
+        <img src="img/hero-back.svg" loading="lazy">
+
       </div>
 
       <video poster ="img/poster.jpg"class="video-insert" autoplay loop muted playsinline><source src="img/video.mp4" type="video/mp4"></video>
