--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                           </div>
                           <div class="gallery-2-bottom">
                             <a href="img/g1-1-fullres.jpg" loading = "lazy" class = "glightbox" data-gallery="mygallery">
-                              <img loading = "lazy" class loading = "lazy" = "gallery-img-last" src="img/g1-5.jpg">
+                              <img loading = "lazy" class = "gallery-img-last" loading = "lazy" src="img/g1-5.jpg">
                             </a>
                           </div>
                         </div>
