--- a/index.html
+++ b/index.html
@@ -137,19 +137,17 @@
                 <span class ="span-2">Lock In Your Adventure with 15% Upfront!</span>
               </div>
 
-              <!-- Submit form -->
-              <<div id="modal" class="modal">
+          </div>
+
+          <!-- Submit form -->
+              <div id="modal" class="modal">
                   <div class="modal-content">
                       <span class="close">&times;</span>
-                      <!-- Content dynamically loaded here -->
                       <div id="modal-content-placeholder">
                           Loading content...
                       </div>
                   </div>
               </div>
-
-
-          </div>
       
     </div>
 
