--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <button class="secondary">Learn more</button>
         </div>
       </div>
-        <img src="img/hero-back.svg">
+        <img src="img/hero-back.png">
 
       </div>
 
