--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
           <button class="secondary">Learn more</button>
         </div>
       </div>
-        <img src="img/hero-back.png">
+
+      <div class="hero-left-back"></div>
 
       </div>
 
