--- a/index.html
+++ b/index.html
@@ -67,8 +67,10 @@
           <button class="secondary">Learn more</button>
         </div>
       </div>
-
-      <div class="hero-left-back"></div>
+      
+      <div class="hero-left-back">
+        <link rel="preload" href="img/hero-back.png" as="image">
+      </div>
 
       </div>
 
