--- a/test.html
+++ b/test.html
@@ -88,18 +88,19 @@
        </div>
        <div class="form-row">
          <div class="form-field">
-           <div class="input-container">
+           <div class="input-container custom-select">
              <label for="pickup-location">Pick-up location</label>
-             <select id="pickup-location" name="pickup-location" required>
+             <select id="pickup-location" class = "custom-select" name="pickup-location" required>
                <option value="" disabled selected>Choose pick-up location</option>
-               <option value="location1">Location 1</option>
-               <option value="location2">Location 2</option>
+               <option value="location1">Reykjavík central area</option>
+               <option value="location2">Keflavík Airport</option>
+               <option value="location2">Outside of center area</option>
              </select>
            </div>
          </div>
          <div class="form-field">
            <div class="input-container">
-             <label for="pickup-date">Date of pick-up</label>
+             <label for="pickup-date" class = "custom-date">Date of pick-up</label>
              <input type="date" id="pickup-date" name="pickup-date" required>
            </div>
          </div>
@@ -160,7 +161,7 @@
             }
           });
         });
-        
+
     </script>
 
 </body>
