--- a/test.html
+++ b/test.html
@@ -99,9 +99,9 @@
            </div>
          </div>
          <div class="form-field">
-           <div class="input-container">
+           <div class="input-container custom-date-icon">
              <label for="pickup-date" class = "custom-date">Date of pick-up</label>
-             <input type="date" id="pickup-date" name="pickup-date" required>
+             <input type="date" id="pickup-date" name="pickup-date" min="2025-06-01" required>
            </div>
          </div>
        </div>
