--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>AlltRaf</title>
 
   <!-- Add CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+  <link rel="stylesheet" href="calendar.css">
 
   <!-- Add JS -->
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
@@ -386,10 +386,49 @@
 
     <script type="text/javascript">
       document.addEventListener("DOMContentLoaded", () => {
-          flatpickr("#pickup-date", {
-              dateFormat: "Y-m-d",
-              appendTo: document.querySelector(".modal-content") // Adjust to your modal's container
-          });
+        flatpickr("#pickup-date", {
+          dateFormat: "Y-m-d", // Original input value format for backend
+          altInput: true, // Enables a more user-friendly display format
+          altFormat: "F j, Y", // Basic format without ordinal suffix
+          appendTo: document.querySelector(".modal-content"),
+          locale: {
+            firstDayOfWeek: 1, // Set Monday as the first day of the week
+          },
+          closeOnSelect: false, // Prevent the calendar from closing automatically
+          nextArrow:
+            '<svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="36" height="36" rx="18" transform="matrix(-1 0 0 1 36 0)" fill="#F5F5F5"/><path d="M23.0024 17.7119C22.9976 17.5264 22.9609 17.3579 22.8926 17.2065C22.8242 17.0503 22.7168 16.8989 22.5703 16.7524L17.0332 11.3325C16.8086 11.1128 16.5376 11.0029 16.2202 11.0029C16.0054 11.0029 15.8101 11.0566 15.6343 11.1641C15.4536 11.2666 15.3096 11.4058 15.2021 11.5815C15.0947 11.7573 15.041 11.9526 15.041 12.1675C15.041 12.4946 15.168 12.7803 15.4219 13.0244L20.2485 17.7046L15.4219 22.3921C15.168 22.646 15.041 22.9341 15.041 23.2563C15.041 23.4712 15.0947 23.6665 15.2021 23.8423C15.3096 24.0181 15.4536 24.1572 15.6343 24.2598C15.8101 24.3672 16.0054 24.4209 16.2202 24.4209C16.5376 24.4209 16.8086 24.3086 17.0332 24.084L22.5703 18.6641C22.7217 18.5176 22.8315 18.3687 22.8999 18.2173C22.9683 18.061 23.0024 17.8926 23.0024 17.7119Z" fill="#2C2E2C"/></svg>',
+          prevArrow:
+            '<svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg"><rect width="36" height="36" rx="18" fill="#F5F5F5"/><path d="M13.0332 17.7119C13.038 17.5264 13.0747 17.3579 13.1429 17.2065C13.2113 17.0503 13.3187 16.8989 13.4652 16.7524L18.998 11.3325C19.2226 11.1128 19.4936 11.0029 19.811 11.0029C20.0258 11.0029 20.2211 11.0566 20.3969 11.1641C20.5776 11.2666 20.7216 11.4058 20.8291 11.5815C20.9365 11.7573 20.9902 11.9526 20.9902 12.1675C20.9902 12.4946 20.8632 12.7803 20.6093 13.0244L15.775 17.7046L20.6093 22.3921C20.8632 22.646 20.9902 22.9341 20.9902 23.2563C20.9902 23.4712 20.9365 23.6665 20.8291 23.8423C20.7216 24.0181 20.5776 24.1572 20.3969 24.2598C20.2211 24.3672 20.0258 24.4209 19.811 24.4209C19.4936 24.4209 19.2226 24.3086 18.998 24.084L13.4652 18.6641C13.3138 18.5176 13.204 18.3687 13.1356 18.2173C13.0672 18.061 13.0332 17.8926 13.0332 17.7119Z" fill="#2C2E2C"/></svg>',
+          onChange: (selectedDates, dateStr, instance) => {
+            // Get the selected date
+            const date = selectedDates[0];
+            if (date) {
+              // Define a function to get the ordinal suffix
+              const getOrdinalSuffix = (day) => {
+                if (day > 3 && day < 21) return "th";
+                switch (day % 10) {
+                  case 1:
+                    return "st";
+                  case 2:
+                    return "nd";
+                  case 3:
+                    return "rd";
+                  default:
+                    return "th";
+                }
+              };
+
+              // Format the date manually with the ordinal suffix
+              const month = instance.formatDate(date, "F");
+              const day = instance.formatDate(date, "j");
+              const year = instance.formatDate(date, "Y");
+              const formattedDate = `${month} ${day}${getOrdinalSuffix(day)}, ${year}`;
+
+              // Set the altInput value to the custom formatted date
+              instance.altInput.value = formattedDate;
+            }
+          },
+        });
       });
     </script>
 
